# distributed-rag-platform

./: .gitignore  README.md
.github/workflows/: build-images.yaml  ci.yaml  deploy.yaml
charts/common/: Chart.yaml
charts/common/templates/: _helpers.tpl  _serviceaccount.tpl
charts/ingestion-worker/: Chart.yaml  values.yaml
charts/ingestion-worker/templates/: _helpers.tpl  deployment.yaml  scaledobject.yaml  serviceaccount.yaml  triggerauth.yaml
charts/mcp-gateway/: Chart.yaml  values.yaml
charts/mcp-gateway/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/umbrella/: Chart.yaml  values.dev.yaml  values.yaml
db/migrations/: 001_init.sql
docs/: architecture.md  getting-started.md  issues.md  runbook.md
infra/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
infra/environments/dev/: .terraform.lock.hcl  main.tf  outputs.tf
infra/environments/prod/: main.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/eks/: iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/elasticache/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  (+1 more)
observability/: alerts.yaml
scripts/: apply-migrations.sh  dev-up.sh
services/ingestion-worker/: Dockerfile  pyproject.toml
services/ingestion-worker/src/: chunker.py  config.py  db.py  embedder.py  main.py  metrics.py  poller.py  s3.py
services/ingestion-worker/tests/: test_chunker.py  test_poller.py  test_smoke.py
services/mcp-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+22 files in other folders)
